--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,7 +7,13 @@
   <%- include('../includes/navigation.ejs') %>
 
   <main>
+    <% if (errorMessage) { %>
+      <div class="user-message user-message--error">
+        <%= errorMessage %>
+      </div>
+    <% } %>
     <form class="login-form" action="/signup" method="post">
+      <input type="hidden" name="_csrf" value="<%= csrfToken %>">
       <div class="form-control">
         <label for="email">Email</label>
         <input type="email" name="email" id="email">
