--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -13,6 +13,7 @@
             <p><%= product.title %></p>
             <p>Quantity: <%= quantity %></p>
             <form action="/cart-delete-item" method="POST">
+              <input type="hidden" name="_csrf" value="<%= csrfToken %>">
               <input type="hidden" name="productId" value="<%= product._id %>">
               <button class="btn danger" type="submit">Delete</button>
             </form>
@@ -22,6 +23,7 @@
       <hr>
       <div class="centered">
         <form action="/order" method="POST">
+          <input type="hidden" name="_csrf" value="<%= csrfToken %>">
           <button type="submit" class="btn">Order Now!</button>
         </form>
       </div>
